Fix for MWB-363: Enhanced URL verification